@@ -70,6 +70,10 @@ EQS_COM = {
 	color = rgb { 255 0 63 }
 	color_ui = rgb { 122 54 54 }
 }
+COM_world = {
+	color = rgb { 255 0 63 }
+	color_ui = rgb { 122 54 54 }
+}
 EQS_SOL = {
 	color = rgb { 255 224 129 }
 	color_ui = rgb { 130 123 100 }
