@@ -32,6 +32,8 @@ CHN_protectorates = {
 	CHN_manehattan_protectorate = {
 		icon = manehattan
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -77,6 +79,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -126,6 +130,8 @@ CHN_protectorates = {
 	CHN_baltimare_protectorate = {
 		icon = statue
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -155,6 +161,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -203,6 +211,8 @@ CHN_protectorates = {
 	CHN_stableside_protectorate = {
 		icon = baltimare
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -254,6 +264,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -308,6 +320,8 @@ CHN_protectorates = {
 	CHN_southern_protectorate = {
 		icon = baltimare
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -365,6 +379,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -412,6 +428,8 @@ CHN_protectorates = {
 	}
 	CHN_desert_protectorate = {
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -455,6 +473,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				OR = {
 					is_subject_of = ROOT
@@ -501,6 +521,8 @@ CHN_protectorates = {
 	}
 	CHN_pony_protectorate = {
 		available = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				exists = no
 			}
@@ -518,6 +540,8 @@ CHN_protectorates = {
 		}
 		
 		visible = {
+			has_government = fascism
+			controls_canterlot = yes
 			EQS = {
 				exists = no
 			}
