@@ -353,6 +353,54 @@ STG_special_constructions = {
 }
 
 STG_foreign_affairs = {
+	STG_invite_people_to_faction = {
+		icon = hammer_and_horseshoe_decision
+		available = {
+			FROM = {
+				has_government = communism
+				NOT = {
+					is_in_faction_with = ROOT
+				}
+			}
+			is_faction_leader = yes
+		}
+		cost = 0
+		ai_will_do = {
+			factor = 50
+		}
+		is_good = yes
+		visible = {
+			FROM = {
+				has_government = communism
+				NOT = {
+					is_in_faction_with = ROOT
+				}
+			}
+			is_faction_leader = yes
+		}
+		target_trigger = {
+			FROM = {
+				OR = {
+					original_tag = YAK
+					original_tag = JAK
+					original_tag = GRF
+					original_tag = PNG
+					original_tag = CRY
+					original_tag = OLE
+					original_tag = CHN
+				}
+				has_government = communism
+				NOT = {
+					is_in_faction_with = ROOT
+				}
+			}
+		}
+		complete_effect = {
+			FROM = {
+				country_event = stalliongrad.146
+			}
+		}
+	}
 	STG_claim_EQS_cores = {
 		icon = stg_cores
 		available = {
@@ -954,6 +1002,33 @@ political_actions = {
 		cost = 25
 		complete_effect = {
 			set_province_name = { id = 9332 name = "Altytown"}
+		}
+	}
+}
+form_the_socialist_world_republic = {
+	form_the_socialist_world_republic_decision = {
+		icon = red_star
+		available = {
+			has_government = communism
+			all_state = {
+				is_owned_by = ROOT
+			}
+		}
+		cost = 25
+		ai_will_do = {
+			factor = 100
+		}
+		fire_only_once = yes
+		is_good = yes
+		visible = {
+			has_government = communism
+			all_state = {
+				is_owned_by = ROOT
+			}
+		}
+		complete_effect = {
+			drop_cosmetic_tag = yes
+			set_cosmetic_tag = COM_world
 		}
 	}
 }
