@@ -100,3 +100,9 @@ form_prywhen = {
 		}
 	}
 }
+form_the_socialist_world_republic = {
+	icon = generic_communism
+	priority = 50
+	allowed = {
+	}
+}
