@@ -939,9 +939,10 @@ focus_tree = {
 		}
 		bypass = {
 			EQS = {
-				has_government = communism
-				NOT = { has_civil_war = yes }
-				NOT = { exists = yes }
+				OR = {
+					has_government = communism
+					exists = no
+				}
 			}
 		}
 		ai_will_do = {
@@ -970,8 +971,10 @@ focus_tree = {
 		}
 		bypass = {
 			EQS = {
-				has_government = communism
-				NOT = { has_civil_war = yes }
+				OR = {
+					has_government = communism
+					exists = no
+				}
 			}
 		}
 		x = 8
@@ -993,10 +996,13 @@ focus_tree = {
 			focus = support_revolution_in_eqs
 		}
 		bypass = {
-		any_other_country = {
-				original_tag = EQS
-				has_government = communism
-				NOT = { has_civil_war = yes }
+			OR = {
+				any_other_country = {
+					original_tag = EQS
+					has_government = communism
+					NOT = { has_civil_war = yes }
+				}
+				EQS = { exists = no }
 			}
 		}
 		available = {
