@@ -42,6 +42,19 @@ leader_traits = {
 			experience_loss_factor = -0.05
 		}
 	}
+	midnight_poppy = {
+		type = all
+		trait_type = personality_trait
+
+		allowed = {
+			always = no
+		}
+
+		modifier = {
+			army_morale_factor = 0.05
+			army_org_Factor = 0.05
+		}
+	}
 	queen_terror = {
 		type = all
 		trait_type = personality_trait
