@@ -301,26 +301,7 @@ country_event = { #### Equestrian Union
 	desc = eqscom.11.d
 	picture = GFX_event_starlight_for_the_win
 
-	trigger = {
-		OR = {
-			original_tag = EQS
-			tag = STG
-		}
-		has_government = communism
-		OR = {
-			STG = { exists = no }
-			EQS = { exists = no }
-		}
-		STL = { exists = no }
-		CRY = { exists = no }
-		owns_state = 3
-		owns_state = 75
-		owns_state = 153
-		owns_state = 53
-		owns_state = 57
-	}
-	mean_time_to_happen = { days = 10 }
-	fire_only_once = yes
+	is_triggered_only = yes
 	option = { ## Ok den
 		name = eqscom.11.a
 		drop_cosmetic_tag = yes
