@@ -3588,4 +3588,43 @@ country_event = {
 		}
 	}
 }
-		
+
+country_event = {
+	id = stalliongrad.146
+	title = stalliongrad.146.t
+	desc = stalliongrad.146.d
+	picture = GFX_event_stg_pairlament
+	is_triggered_only = yes
+	option = {
+		name = stalliongrad.146.a
+		STG = { add_to_faction = ROOT }
+		ai_chance = {
+			factor = 1
+			modifier = {
+				factor = 50
+				has_opinion = { target = STG value > 10 }
+			}
+		}
+	}
+	option = {
+		name = stalliongrad.146.b
+		country_event = { days = 1 id = stalliongrad.147 }
+		ai_chance = {
+			factor = 1
+			modifier = {
+				factor = 50
+				has_opinion = { target = STG value < -10 }
+			}
+		}
+	}
+}
+country_event = {
+	id = stalliongrad.147
+	title = stalliongrad.147.t
+	desc = stalliongrad.147.d
+	picture = GFX_event_stg_pairlament
+	is_triggered_only = yes
+	option = {
+		name = stalliongrad.147.a
+	}
+}
