@@ -130,7 +130,7 @@ create_corps_commander = {
 create_corps_commander = {
 	name = "Midnight Poppy"
 	portrait_path = "gfx/leaders/EQC/Midnight_Poppy.tga"
-	traits = { }
+	traits = { midnight_poppy }
 	skill = 2
 	attack_skill = 2
 	defense_skill = 2
