@@ -9,6 +9,10 @@ spriteTypes = {
 		texturefile = "gfx/interface/traits/personal/trait_supernova.dds"
 	}
 	spriteType = {
+		name = "GFX_trait_midnight_poppy"
+		texturefile = "gfx/interface/traits/personal/trait_midnight_poppy.dds"
+	}
+	spriteType = {
 		name = "GFX_trait_newmareland_digger"
 		texturefile = "gfx/interface/traits/personal/trait_newmareland_digger.dds"
 	}
