@@ -685,3 +685,7 @@ MAN_fascism_ADJ:0 "Manehattan"
 MAN_democratic_ADJ:0 "Manehattan"
 MAN_neutrality_ADJ:0 "Manehattan"
 MAN_communism_ADJ:0 "Manehattan"
+
+COM_world_communism:0 "Worldwide Socialist Republic"
+COM_world_communism_DEF:0 "The Socialist Republic of the World"
+COM_world_communism_ADJ:0 "Worlds"
