@@ -832,3 +832,12 @@ stalliongrad.139.d:0 "News came from Sovenok sanatorium, Altidiya died in bed in
 stalliongrad.139.a:0 "We will not forget!"
 
 STG_rename_Severokholm_to_Altytown:0 "Rename Severokholm to Altytown"
+
+stalliongrad.146.t:0 "Stalliongrad invites us to faction"
+stalliongrad.146.d:0 ""
+stalliongrad.146.a:0 "Accept."
+stalliongrad.146.b:0 "Decline."
+stalliongrad.147.t:0 "[From.GetName] rejects"
+stalliongrad.147.d:0 ""
+stalliongrad.147.a:0 "Fine."
+STG_invite_people_to_faction:0 "Invite [From.GetName] to our alliance"
