@@ -71,3 +71,5 @@ GRI_kill_blockers:0 "(AI ONLY) Kill Blockers"
 form_equestrian_socialist_union_category:0 "Equestrian Socialist Republic"
 form_equestrian_socialist_republic:0 "Form the Socialist Republic of Equestria"
 form_equestrian_socialist_union:0 "Form the Socialist Union of Equestria"
+form_the_socialist_world_republic:0 "Socialist Republic of the World"
+form_the_socialist_world_republic_decision:0 "Form the Socialist Republic of the World"
