@@ -125,3 +125,5 @@
  bleeding_heart_desc:0 "Doesn't like killing."
  sunset_shimmer_t:0 "Otherworldly Experience"
  sunset_shimmer_t_desc:0 "This general was long absent from the land, and has only recently returned. During their time abroad they picked up several quirks that some call unsettling and even alien, but which also make them a more effective commander."
+ midnight_poppy:0 "Master of Psychology"
+ midnight_poppy_desc:0 ""
