@@ -19,6 +19,8 @@
 ✢ Removed unfinished neutrality path from Crystal Empire
 ✢ Cosmetic tag for Aquileian Republic
 ✢ Names for Aquiliean tanks
+✢ Stalliongrad can invite some nations to their faction via decisions
+✢ Formable Socialist Republic of the World
 
 ⚔ “Knights and Flowers” 1.0.3.2 🌼
 
